--- a/pact-provider-junit5/pom.xml
+++ b/pact-provider-junit5/pom.xml
@@ -7,38 +7,33 @@
     <parent>
         <groupId>info.novatec.testit</groupId>
         <artifactId>pact</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>pact-provider-junit5</artifactId>
     <packaging>jar</packaging>
     <name>testIT | Pact - JUnit 5</name>
 
-    <properties>
-        <kotlin.version>1.2.20</kotlin.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
-
         <dependency>
             <groupId>au.com.dius</groupId>
             <artifactId>pact-jvm-matchers_2.12</artifactId>
-            <version>3.5.12</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-standalone</artifactId>
         </dependency>
     </dependencies>
 
