--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.9.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nhaarman.mockitokotlin2</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>2.0.0-alpha01</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
