--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: java
+
+dist: trusty
+sudo: false
+
 jdk:
   - openjdk8
   - oraclejdk8
+  - oraclejdk9
 
-dist: trusty
 install: true
-
-script:
-  - mvn clean verify
+script: ./mvnw test
